@@ -19,6 +19,10 @@ class PWB_Carousel_Shortcode{
         'hide_empty'        => false
     ), $atts, 'pwb-carousel' );
 
+    //enqueue deps
+    if( !wp_style_is('pwb-lib-slick') ) wp_enqueue_style('pwb-lib-slick');
+    if( !wp_script_is('pwb-lib-slick') ) wp_enqueue_script('pwb-lib-slick');
+
     return \Perfect_Woocommerce_Brands\Perfect_Woocommerce_Brands::render_template(
       'carousel',
       'shortcodes',
